syntax = "proto3";

package erda.apps.aiproxy.audit;
option go_package = "github.com/erda-project/erda-proto-go/apps/aiproxy/audit/pb";

import "google/api/annotations.proto";
import "apps/aiproxy/metadata/metadata.proto";
import "google/protobuf/timestamp.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "common/http.proto";

service AuditService {
    rpc Paging(AuditPagingRequest) returns (AuditPagingResponse) {
        option(google.api.http) = {
            get: "/api/ai-proxy/audits?x_request_id={xRequestId}&auth_key={authKey}"
        };
    }
}

message Audit {
    string id = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
    google.protobuf.Timestamp deletedAt = 4;
    google.protobuf.Timestamp requestAt = 5;
    google.protobuf.Timestamp responseAt = 6;

    string authKey = 7;
    int32 status = 8;
    string prompt = 9;
    string completion = 10;
    string requestBody = 11;
    string responseBody = 12;
    string actualRequestBody = 13;
    string actualResponseBody = 14;
    string userAgent = 15;
    string xRequestId = 16;

    string clientId = 17;
    string modelId = 18;
    string sessionId = 19;

    string username = 20;
    string email = 21;

    string bizSource = 22; // 客户端定义的业务来源
    string operationId = 23;

    string responseFunctionCallName = 24;

    metadata.Metadata metadata = 25;
}

message AuditCreateRequestWhenReceived {
    google.protobuf.Timestamp requestAt = 1;
    string authKey = 2;
    string requestBody = 3;
    string userAgent = 4;
    string xRequestId = 5;

    string requestContentType = 6;
    string requestHeader = 7;

    string identityPhoneNumber = 8;
    string identityJobNumber = 9;

    string dingtalkStaffId = 10;
    string dingtalkChatType = 11;
    string dingtalkChatTitle = 12;
    string dingtalkChatId = 13;

    string username = 15;
    string email = 16;
    string bizSource = 17;
}

message AuditPagingRequest {
    int64 pageNum = 1;
    int64 pageSize = 2;

    string authKey = 3 [(validate.rules).string = {min_len: 32, max_len:36, ignore_empty: true}];
    string xRequestId = 4 [(validate.rules).string = {min_len: 0, max_len: 64}];
}

message AuditPagingResponse {
    int64 total = 1;
    repeated Audit list = 2;
}
